Corrected spacing

--- a/style.css
+++ b/style.css
@@ -93,14 +93,14 @@ font-size: 7rem;
 
 /*This will be used for all white buttons*/
 .white--button {
-  margin-top: 20px;
-  height: 60px;
-  width: 250px;
+  margin-top: 30px;
+  height: 70px;
+  width: 260px;
   background-color: white;
   color: black;
-  border-radius: 30px;
+  border-radius: 40px;
   font-family:'Segoe UI';
-  font-size: 1.5rem;
+  font-size: 1.7rem;
 }
 
 .white--button a:hover {
@@ -120,14 +120,13 @@ font-size: 7rem;
 .Rating--Section--h2 {
   display:flex;
   margin-top: 30px;
-  margin-left: 20px;
+  margin-left: 30px;
   font-family:'Segoe UI';
   font-weight: lighter;
   font-size: 4rem;
 }
 .ratings{
   display: flex;
- 
   width: 100%;
   height:50%;
   /*background-color:darkgreen;*/
@@ -189,7 +188,7 @@ font-size: 7rem;
   height:30%;
   /*background-color:red;*/
   flex-direction: column;
-  padding-left: 20px;
+  padding-left: 30px;
   padding-top:10px;
   padding-bottom: 50px;
 }
